Fix footer spacing (again)

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ p {
 }
 
 .hero-section {
-    padding-top: 150px;
+    padding-top: 130px;
     padding-bottom: 200px;
     border-bottom: 1px solid #B7B7B7;
 }
@@ -381,6 +381,7 @@ p {
     margin-right: 8px;
 }
 
+
 /* <<<<<<<<<<<<<<<<<< FOOTER >>>>>>>>>>>>>>>>>> */ 
 .footer-section {
     padding-top: 100px;
@@ -390,8 +391,8 @@ p {
 .footer-content {
     text-align: left;
     font-size: 15px;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 80px;
+    padding-bottom: 80px;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
